# sql_diff

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  requirements.txt  sql_diff.py
tests/: new.sql  new_constraints.sql  old.sql  old_constraints.sql  test_sql_diff.py
