[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-diff"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A tool to compare two SQL dumps and generate a patch."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlparse>=0.4.0",
]

[project.scripts]
sql-diff = "sql_diff:main"

[tool.setuptools]
py-modules = ["sql_diff"]
